<resources>
    <string name="app_name">熊猫频道</string>
    <string name="radio_home">首页</string>
    <string name="radio_pandachannel">熊猫直播</string>
    <string name="radio_rollingvideo">滚滚视频</string>
    <string name="radio_pandabroadcast">熊猫播报</string>
    <string name="radio_liveinchina">直播中国</string>
    <string name="bt_send">发送</string>
    <string name="about">
        熊猫频道是央视网创新理念、倾力打造的一个国际化新媒体产品，以直播大熊猫这一中国特有的珍稀动物为特色，以大熊猫相关事件性和日常移动直播为基础，以多终端、多平台为媒介，希望向全球互联网用户展现真实、可爱的大熊猫及其保护情况，传递和平、友爱、公益的理念。现阶段开设了《精彩一刻》、《熊猫百科全说》、《熊猫那些事儿》等符合网络视频传播特点，及知识性和趣味性的一系列原创大点播节目。</string>

</resources>
