<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a12710.pandachannel.activity.MainActivity">

<LinearLayout
    android:id="@+id/home_line"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/home_line"
    >
    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/radio_home"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:drawableTop="@drawable/radio_home"
        android:button="@null"
        android:text="@string/radio_home"
        android:background="@drawable/color_home"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"

        />
    <RadioButton
        android:id="@+id/radio_pandachannel"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:text="@string/radio_pandachannel"
        android:drawableTop="@drawable/radio_pandachannel"
        android:background="@drawable/color_home"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"

        />
    <RadioButton
        android:id="@+id/radio_rollingvideo"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:text="@string/radio_rollingvideo"
        android:drawableTop="@drawable/radio_rollingvideo"
        android:background="@drawable/color_home"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"

        />
    <RadioButton
        android:id="@+id/radio_pandabroadcast"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:text="@string/radio_pandabroadcast"
        android:drawableTop="@drawable/radio_pandabroadcast"
        android:background="@drawable/color_home"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"

        />
    <RadioButton
        android:id="@+id/radio_liveinchina"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:text="@string/radio_liveinchina"
        android:drawableTop="@drawable/radio_liveinchina"
        android:background="@drawable/color_home"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"

        />
</RadioGroup>

</LinearLayout>
    <FrameLayout
        android:id="@+id/home_fm"
        android:layout_above="@id/home_line"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>

</com.zhy.android.percent.support.PercentRelativeLayout>
